--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Salil Overflow
+author: Salil Walavalkar
 email: salil.walavalkar@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This blog is a place to store all the stuff that overflows from my brain.
+  Mind Palace
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://salilwalavalkar.github.io/blog/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: SalilWalavalkar
 github_username:  salilwalavalkar
+linkedin_username: salilwalavalkar
 
 # Build settings
 markdown: kramdown
